<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.asu.bsse.sbarnai.ser423calendarbrowser.ViewEventActivity"
    android:background="@color/summerSky"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventName"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/eventNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventNameText"
            android:layout_margin="10dp"
            android:background="@color/summerSky"
            android:layout_below="@id/eventName"/>


        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_margin="10dp"
            android:layout_below="@id/eventNameText"
            />

        <EditText
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationText"
            android:layout_margin="10dp"
            android:background="@color/summerSky"
            android:layout_below="@id/location"/>

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:layout_margin="10dp"
            android:layout_below="@+id/locationText"
            />


        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_below="@+id/startDate"
            android:calendarViewShown="false"/>

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:layout_margin="10dp"
            android:layout_below="@+id/datePicker"
            />


        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_below="@+id/startTime"/>

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:layout_margin="10dp"
            android:layout_below="@+id/timePicker"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker2"
            android:layout_below="@+id/endDate"
            android:calendarViewShown="false"/>

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:layout_margin="10dp"
            android:layout_below="@+id/datePicker2"
            />


        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker2"
            android:layout_below="@+id/endTime"/>

        <CheckBox android:id="@+id/allDayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allDay"
            android:layout_below="@+id/timePicker2"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_margin="10dp"
            android:layout_below="@+id/allDayCheckBox"/>

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/description"/>

        <Button
            android:id="@+id/saveChanges"
            android:text="@string/deleteEvent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionText"
            android:onClick="saveChanges"/>

        <Button
            android:id="@+id/deleteEvent"
            android:text="@string/saveChanges"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saveChanges"
            android:onClick="deleteEvent"/>

        <Button
            android:id="@+id/backToMainActivity"
            android:text="@string/backToMainActivity"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deleteEvent"
            android:onClick="backToMainActivity"/>

    </RelativeLayout>
</ScrollView>
